landing page fixed

--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -30,6 +30,7 @@ input {
   border: none;
 }
 
+
 .logo h2 {
   width: 120px;
   margin-left: 2rem;
@@ -63,6 +64,10 @@ nav {
 
 nav ul {
   display: flex;
+}
+
+nav .logo {
+  margin-right: 40%;
 }
 
 .active {
@@ -637,6 +642,7 @@ nav .menu-btn,
       justify-content: space-between;
       height: 65px;
       padding: 0px 30px;
+      
       position: fixed;
     }
 
@@ -666,7 +672,7 @@ nav .menu-btn,
       height: 40px;
       justify-content: center;
       align-items: center;
-      margin: 0px;
+      margin-left: 100px;
       padding: 25px;
       border: 1px solid rgba(38, 38, 38, 0.03);
     }
